@startuml
' uncomment the line below if you're using computer with a retina display
' skinparam dpi 300
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
' we use bold for primary key
' green color for unique
' and underscore for not_null
!define primary_key(x) <b>x</b>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>
' other tags available:
' <i></i>
' <back:COLOR></color>, where color is a color name or html color code
' (#FFAACC)
' see: http://plantuml.com/classes.html#More
hide methods
hide stereotypes

' entities

Table(user, "User\n(User in the system)") {
primary_key(ID) INTEGER
not_null(role) INTEGER
not_null(unique(email)) VARCHAR[45]
not_null(password) VARCHAR[32]
not_null(firstname) VARCHAR[45]
not_null(lastname) VARCHAR[45]
gender INTEGER
entity VARCHAR[70]
country VARCHAR[2]
}

Table(country, "Country\n(List of Countries)") {
primary_key(ID) INTEGER
not_null(iso) VARCHAR[2]
name VARCHAR[80]
}

Table(project, "Project\n(List of Projects)") {
primary_key(ID) INTEGER
active BIT
not_null(id_user) INTEGER
creation_date DATETIME
finish_date DATETIME
not_null(name) VARCHAR[50]
not_null(description) VARCHAR[1000]
link VARCHAR[50]
id_template INTEGER
archived BIT
}

Table(evaluation, "Evaluation\n(List of Evaluations)") {
primary_key(ID) INTEGER
id_project INTEGER
id_user INTEGER
}

Table(template, "Template\n(List of Templates)") {
primary_key(ID) INTEGER
name VARCHAR[50]
}

Table(template_category, "Category\n(List of Categories)") {
primary_key(ID) INTEGER
id_template INTEGER
name VARCHAR[50]
}

Table(template_question, "Question\n(List of Questions)") {
primary_key(ID) INTEGER
id_category INTEGER
name VARCHAR[50]
}

Table(template_answer, "Answer\n(List of Answers)") {
primary_key(ID) INTEGER
id_template INTEGER
name VARCHAR[50]
value DOUBLE
colour VARCHAR[6]
}

' relationships
user -- country : "User is assigned\nto one country"
project -- user : "User (with role greater than 0)\ncan create one or more projects"
user -- project : "User\nis assigned to N projects."
evaluation -- project : "Evaluation\nis assigned to one project"
evaluation -- user : "Evaluation\nis done by one user"
project -- template : "Project\nis assigned to one template"
template -- template_category : "Template has one or more categories"
template_category -- template_question : "Category has one or more questions"
template -- template_answer : "Template has one or more answers"
@enduml
